<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/control_bg"
    android:orientation="vertical" >

    <!-- android:background="#4C000000" -->

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_weight="1"
        android:background="#4C000000"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/myVidoButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:background="@drawable/button_selecter_remote"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/VoiceControl"
            android:textColor="#FFFFFF"
            android:textSize="29sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:background="@drawable/button_selecter_remote"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/userIsOnlinImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:layout_toLeftOf="@id/btn_back" />

        <Button
            android:id="@+id/goHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_back"
            android:layout_alignBottom="@+id/btn_back"
            android:layout_toLeftOf="@+id/userIsOnlinImageView"
            android:background="#4C000000"
            android:text="回家"
            android:visibility="gone" />

        <Button
            android:id="@+id/weiZhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/myVidoButton"
            android:background="#4C000000"
            android:text="位置" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10000" >

        <LinearLayout
            android:id="@+id/showContentView"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:cacheColorHint="#0000"
            android:dividerHeight="5dp"
            android:listSelector="@android:color/transparent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_weight="1"
        android:background="@drawable/bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp" >

            <Button
                android:id="@+id/downBt"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:background="@drawable/control_button_speak"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >

                <ImageView
                    android:id="@+id/im_mic"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:focusable="false"
                    android:src="@drawable/icon_mic" />

                <TextView
                    android:id="@+id/tv_speak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_toRightOf="@id/im_mic"
                    android:focusable="false"
                    android:text="@string/SPEAK"
                    android:textColor="#4b4b4b"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50sp"
            android:layout_weight="1000"
            android:background="@drawable/input_bg_000" >

            <EditText
                android:id="@+id/et_sendmessage"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:textColor="#ffffff"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="21sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="23dp"
            android:background="@drawable/control_button_send"
            android:text="@string/SEND"
            android:textColor="#4b4b4b"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>